--- a/requirements.txt
+++ b/requirements.txt
@@ -6,4 +6,7 @@ ffmpeg-python==0.2.0
 tqdm==4.66.1
 psutil==5.9.5
 Pillow==10.0.1
-scipy==1.11.3 
+scipy==1.11.3
+GPUtil==1.4.0
+pycuda==2022.2.2
+pyopencl==2023.1.4 
